# Trading-Intelligence-Platform

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_LOG.md  PROJECT_CONTEXT.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/: README.md
backend/api/: __init__.py  ai.py  aoi.py  checklist.py  entry.py  market_data_sync.py  readiness.py  replay.py  risk.py  scanner.py  scoring.py  service.py  trading_intelligence.py  visualization.py
backend/app/: __init__.py  __main__.py  cli.py  demo.py  replay_runtime.py  runtime.py
backend/config/: __init__.py  default.yaml  settings.py
backend/core/: __init__.py  events.py  logging.py
backend/engines/: market_state.py
backend/exchange/: __init__.py  bitmart.py  interfaces.py  models.py
backend/models/: __init__.py  domain.py
backend/storage/: __init__.py  candles.py  history.py
backend/sync/: __init__.py  coordinator.py  metadata.py  models.py  planner.py  scanner_universe.py
backend/tests/: test_ai_decision_engine.py  test_aoi_api.py  test_aoi_engine.py  test_api_service.py  test_binance_market_data.py  test_bitmart_market_data.py  test_candle_pipeline.py  test_checklist_engine.py  test_entry_signal_engine.py  test_events.py  test_historical_sync_planner.py  test_historical_validation.py  test_logging.py  test_market_data_sync.py  test_risk_engine.py  (+13 more)
docs/: SRS.md  STABILIZATION_TEST_PLAN_v0.2.1.md  SYSTEM_CORRECTNESS_TEST_PLAN_v0.3.1.md
frontend/: README.md  package.json
scripts/: bootstrap_repo.sh  create_repo.sh  smoke_api.py  validate_historical.py
(+85 files in other folders)
