[project]
name = "trading-intelligence-platform"
version = "0.1.0"
description = "Deterministic market structure analysis platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30",
    "websockets>=12.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.8",
]

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.config" = ["default.yaml"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
